--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -11,7 +11,12 @@ body {
   height: 100%;
 }
 
-.container {
+.t-layout {
+  width: 100%;
+}
+
+.t-layout__content {
+  width: calc(100% - 272px);
   padding: 20px;
   overflow: auto;
 }
