--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -29,6 +29,10 @@ body {
   gap: 20px;
 }
 
+.t-textarea__inner {
+  height: 200px;
+}
+
 .logo-text {
   font-size: 20px;
   font-weight: bold;
@@ -42,6 +46,17 @@ body {
 .t-dialog__position {
   padding-top: 0 !important;
   align-items: center !important;
+}
+
+.ico {
+  width: 30px;
+  height: 30px;
+  margin-right: 15px;
+}
+
+.filename {
+  display: flex;
+  align-items: center;
 }
 
 ::-webkit-scrollbar {
