[+] 增加版本号展示 [*] 修正V6解析模式自动修改UA [*] 优化下载卷检查账号封禁状态 [*] 优化接口错误信息展示 [*] 优化增加下载卷账号逻辑

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -44,7 +44,7 @@ body {
 }
 
 .t-dialog__position {
-  padding-top: 0 !important;
+  padding: 0 !important;
   align-items: center !important;
 }
 
@@ -57,6 +57,10 @@ body {
 .filename {
   display: flex;
   align-items: center;
+}
+
+.t-menu__operations {
+  text-align: center !important;
 }
 
 ::-webkit-scrollbar {
